--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 fastapi = "^0.105.0"
 uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 pydantic = {extras = ["email"], version = "^2.5.2"}
+email-validator = "^2.1.0.post1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
