--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 pydantic = {extras = ["email"], version = "^2.5.2"}
 email-validator = "^2.1.0.post1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
+aiosqlite = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
