--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = {extras = ["email"], version = "^2.5.2"}
 email-validator = "^2.1.0.post1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
 aiosqlite = "^0.19.0"
+pydantic-settings = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
