--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ email-validator = "^2.1.0.post1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
 aiosqlite = "^0.19.0"
 pydantic-settings = "^2.1.0"
+alembic = "^1.13.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
